--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,35 @@
+@font-face {
+  font-display: swap;
+  font-family: "Poppins";
+  font-weight: 300;
+  src: url("../fonts/poppins-v21-latin-300.woff2") format("woff2");
+  src: url("../fonts/poppins-v21-latin-300.woff") format("woff");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Poppins";
+  font-weight: 400;
+  src: url("../fonts/poppins-v21-latin-regular.woff2") format("woff2");
+  src: url("../fonts/poppins-v21-latin-regular.woff") format("woff");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Poppins";
+  font-weight: 600;
+  src: url("../fonts/poppins-v21-latin-600.woff2") format("woff2");
+  src: url("../fonts/poppins-v21-latin-600.woff") format("woff");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Poppins";
+  font-weight: 900;
+  src: url("../fonts/poppins-v21-latin-900.woff2") format("woff2");
+  src: url("../fonts/poppins-v21-latin-900.woff") format("woff");
+}
+
 :root {
   --color-primary-dark: #31261a;
   --color-primary-light: #faf4ea;
@@ -7,7 +39,14 @@
 
 /*Base*/
 body {
-  color: var(--color-primary-dark);
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+address {
+  font-style: normal;
 }
 
 ul {
@@ -21,6 +60,7 @@ ul {
   border-radius: 8px;
   color: var(--color-primary-light);
   cursor: pointer;
+  font-weight: 600;
 }
 
 .button:hover {
@@ -35,14 +75,22 @@ ul {
 /*Link*/
 .link {
   color: var(--color-primary-light);
+  text-decoration: none;
 }
 
 .link:hover {
   color: var(--color-brand-light);
+  text-decoration: underline;
+  font-weight: 600;
 }
 /*Hero*/
 .hero-title {
   color: var(--color-primary-light);
+  text-align: center;
+  letter-spacing: 4px;
+  word-spacing: 20px;
+  font-size: 128px;
+  font-weight: 900;
 }
 .hero-title .accent {
   color: var(--color-brand-light);
@@ -52,6 +100,219 @@ ul {
   background-color: var(--color-brand-light);
   color: var(--color-primary-light);
 }
+
+.advantages-item {
+  font-weight: 300;
+  font-size: 20px;
+}
+
+.section-title {
+  font-weight: 900;
+  font-style: 64px;
+  line-height: 1.3;
+}
+
 .section-title .accent {
   color: var(--color-brand-dark);
+}
+
+/*Traditions section*/
+.traditions-text .brand {
+  color: var(--color-brand-light);
+  font-weight: 600;
+}
+
+.traditions-text .uppercase {
+  text-transform: uppercase;
+}
+
+/*Chef section*/
+.chef-title {
+  font-weight: 600;
+  font-style: 40px;
+}
+
+/*Format section*/
+.format-title {
+  font-weight: 600;
+  font-style: 24px;
+}
+.format-text {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+/*Footer*/
+.address-link {
+  color: var(--color-primary-light);
+  font-weight: 300;
+  font-style: 16px;
+  text-decoration: none;
+}
+.address-link:hover {
+  color: var(--color-brand-light);
+}
+
+.address-copyright {
+  font-size: 14px;
+}
+/* poppins-300 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/poppins-v21-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* poppins-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/poppins-v21-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* poppins-600 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/poppins-v21-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* poppins-900 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/poppins-v21-latin-900.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+:root {
+  --color-primary-dark: #31261a;
+  --color-primary-light: #faf4ea;
+  --color-brand-light: #819b57;
+  --color-brand-dark: #465929;
+}
+
+/*Base*/
+body {
+  color: var(--color-primary-dark);
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+address {
+  font-style: normal;
+}
+
+ul {
+  list-style-type: none;
+}
+
+/*Button*/
+.button {
+  background: var(--color-brand-light);
+  border: 2px solid var(--color-brand-light);
+  border-radius: 8px;
+  color: var(--color-primary-light);
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.button:hover {
+  background: transparent;
+  color: var(--color-brand-dark);
+}
+
+.button:active {
+  background: pink;
+}
+
+/*Link*/
+.link {
+  color: var(--color-primary-light);
+  text-decoration: none;
+}
+
+.link:hover {
+  color: var(--color-brand-light);
+  text-decoration: underline;
+  font-weight: 600;
+}
+/*Hero*/
+.hero-title {
+  color: var(--color-primary-light);
+  text-align: center;
+  letter-spacing: 4px;
+  word-spacing: 20px;
+  font-size: 128px;
+  font-weight: 900;
+}
+.hero-title .accent {
+  color: var(--color-brand-light);
+}
+/*Advantages section*/
+.advantages-list {
+  background-color: var(--color-brand-light);
+  color: var(--color-primary-light);
+}
+
+.advantages-item {
+  font-weight: 300;
+  font-size: 20px;
+}
+
+.section-title {
+  font-weight: 900;
+  font-style: 64px;
+  line-height: 1.3;
+}
+
+.section-title .accent {
+  color: var(--color-brand-dark);
+}
+
+/*Traditions section*/
+.traditions-text .brand {
+  color: var(--color-brand-light);
+  font-weight: 600;
+}
+
+.traditions-text .uppercase {
+  text-transform: uppercase;
+}
+
+/*Chef section*/
+.chef-title {
+  font-weight: 600;
+  font-style: 40px;
+}
+
+/*Format section*/
+.format-title {
+  font-weight: 600;
+  font-style: 24px;
+}
+.format-text {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+/*Footer*/
+.address-link {
+  color: var(--color-primary-light);
+  font-weight: 300;
+  font-style: 16px;
+  text-decoration: none;
+}
+.address-link:hover {
+  color: var(--color-brand-light);
+}
+
+.address-copyright {
+  font-size: 14px;
 }
